--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,24 +5,15 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "gcc-9 - Build and debug active file",
+            "name": "gcc - Build and debug active file",
             "type": "cppdbg",
             "request": "launch",
-            "program": "/mnt/c/Users/ASUS/Downloads/pw3/push_swap",
-            "args": ["5" , "1", "2", "4", "3", "0"],
+            "program": "/Users/hmellahi/Desktop/pw/push_swap",
+            "args": ["3", "2", "5" ,"1", "0", "4"],
             "stopAtEntry": false,
-            "cwd": "/mnt/c/Users/ASUS/Downloads/pw3",
+            "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
-            "MIMode": "gdb",
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                }
-            ],
-            "miDebuggerPath": "/usr/bin/gdb"
-        }
+            "MIMode": "lldb",
     ]
 }
